test/sema/module_import_error.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s

// CHECK: [[# @LINE + 1 ]]:13: error: file 'not_exits.dmz' doesn't exists
const ops = import("not_exits.dmz");

fn main() -> void {
    let x = 1;
    let y = 2;

    ops.print(x);

    let result = ops.integer.add(x, y);

    ops.print(result);
}